--- a/firebase.json
+++ b/firebase.json
@@ -1,13 +1,7 @@
 {
   "hosting": {
-    "public": "./public",
-    "headers": [{
-      "source" : "**/*.@(js|html)",
-      "headers" : [ {
-        "key" : "Cache-Control",
-        "value" : "max-age=0"
-      } ]
-    }]
+    "public": "./public"
+
   },
 
 
