Начало инициализации functions

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,6 @@
 {
   "projects": {
-    "chat": "friendlychat-gayrat"
+    "chat": "friendlychat-gayrat",
+    "default": "friendlychat-gayrat"
   }
 }
