--- a/firebase.json
+++ b/firebase.json
@@ -1,16 +1,16 @@
 {
   "hosting": {
     "public": "./public"
-
   },
-
-
   "firestore": {
     "rules": "firestore.rules"
   },
   "storage": {
     "rules": "storage.rules"
+  },
+  "functions": {
+    "predeploy": [
+      "npm --prefix \"$RESOURCE_DIR\" run lint"
+    ]
   }
 }
-
-
